Fix button and card title alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/*Utility Class*/
-
 /*Main CSS*/
 
 html,
@@ -2556,6 +2554,11 @@ img.card {
 
 .card-content {
   padding: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* List */
